--- a/src/app/components/directory/directory.component.html
+++ b/src/app/components/directory/directory.component.html
@@ -3,46 +3,29 @@
                  matTreeNodeToggle
                  matTreeNodePadding>
     <span class="mat-icon-button" disabled></span>
-    <mat-checkbox class="checklist-leaf-node form"
-                  [ngClass]="{'drop-above': dragNodeExpandOverArea === 'above' && dragNodeExpandOverNode === node,
-                              'drop-below': dragNodeExpandOverArea === 'below' && dragNodeExpandOverNode === node,
-                              'drop-center': dragNodeExpandOverArea === 'center' && dragNodeExpandOverNode === node}"
-                  [checked]="checklistSelection.isSelected(node)"
-                  (change)="checklistSelection.toggle(node);"
-                  draggable="true"
-                  (dragstart)="handleDragStart($event, node);"
-                  (dragover)="handleDragOver($event, node);"
-                  (drop)="handleDrop($event, node);"
-                  (dragend)="handleDragEnd($event);">{{node.item}}</mat-checkbox>
+    <span>{{node.item}}</span>
+    <span class="mat-icon-button" (click)="addNewItem(node)"><mat-icon>add</mat-icon></span>
+    <span class="mat-icon-button" (click)="RemoveItem(node)"><mat-icon>delete</mat-icon></span>
   </mat-tree-node>
 
   <mat-tree-node *matTreeNodeDef="let node; when: hasNoContent" matTreeNodePadding>
-    <button class="btn btn-outline-dark m-1" (click)="saveNode(node, itemValue.value)">Cancel</button>
+    <button mat-button  (click)="saveNode(node, itemValue.value)">Cancel</button>
     <mat-form-field>
-      <input class="form-control" #itemValue placeholder="New item...">
+      <input matInput class="form-control" name="item" #itemValue placeholder="New item...">
     </mat-form-field>
-    <button class="btn btn-outline-dark m-1" (click)="saveNode(node, itemValue.value)">Save</button>
+    <button mat-button (click)="saveNode(node, itemValue.value)">Save</button>
   </mat-tree-node>
 
   <mat-tree-node *matTreeNodeDef="let node; when: hasChild"
                  matTreeNodePadding>
+                 
     <span class="mat-icon-button" matTreeNodeToggle
             [attr.aria-label]="'toggle ' + node.filename">
       <mat-icon class="mat-icon-rtl-mirror">
         {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
       </mat-icon>
     </span>
-    <mat-checkbox [ngClass]="{'drop-above': dragNodeExpandOverArea === 'above' && dragNodeExpandOverNode === node,
-                              'drop-below': dragNodeExpandOverArea === 'below' && dragNodeExpandOverNode === node,
-                              'drop-center': dragNodeExpandOverArea === 'center' && dragNodeExpandOverNode === node}"
-                  draggable="true"
-                  (dragstart)="handleDragStart($event, node);"
-                  (dragover)="handleDragOver($event, node);"
-                  (drop)="handleDrop($event, node);"
-                  (dragend)="handleDragEnd($event);"
-                  [checked]="descendantsAllSelected(node)"
-                  [indeterminate]="descendantsPartiallySelected(node)"
-                  (change)="todoItemSelectionToggle(node)">{{node.item}}</mat-checkbox>
+    <span>{{node.item}}</span>
                  <span class="mat-icon-button" (click)="addNewItem(node)"><mat-icon>add</mat-icon></span>
                  <span class="mat-icon-button" (click)="RemoveItem(node)"><mat-icon>delete</mat-icon></span>
   </mat-tree-node>
