--- a/src/app/components/directory/directory.component.html
+++ b/src/app/components/directory/directory.component.html
@@ -16,9 +16,7 @@
     <button mat-button (click)="saveNode(node, itemValue.value)">Save</button>
   </mat-tree-node>
 
-  <mat-tree-node *matTreeNodeDef="let node; when: hasChild"
-                 matTreeNodePadding>
-                 
+  <mat-tree-node *matTreeNodeDef="let node; when: hasChild"  matTreeNodePadding>                 
     <span class="mat-icon-button" matTreeNodeToggle
             [attr.aria-label]="'toggle ' + node.filename">
       <mat-icon class="mat-icon-rtl-mirror">
