--- a/src/app/components/directory/directory.component.html
+++ b/src/app/components/directory/directory.component.html
@@ -9,7 +9,7 @@
   </mat-tree-node>
 
   <mat-tree-node *matTreeNodeDef="let node; when: hasNoContent" matTreeNodePadding>
-    <button mat-button  (click)="saveNode(node, itemValue.value)">Cancel</button>
+    <button mat-button  >Cancel</button>
     <mat-form-field>
       <input matInput class="form-control" name="item" #itemValue placeholder="New item...">
     </mat-form-field>
@@ -20,6 +20,7 @@
     <span class="mat-icon-button" matTreeNodeToggle
             [attr.aria-label]="'toggle ' + node.filename">
       <mat-icon class="mat-icon-rtl-mirror">
+        
         {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
       </mat-icon>
     </span>
