--- a/src/app/components/directory/directory.component.html
+++ b/src/app/components/directory/directory.component.html
@@ -1,8 +1,12 @@
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
   <mat-tree-node *matTreeNodeDef="let node"
                  matTreeNodeToggle
-                 matTreeNodePadding>
+                 matTreeNodePadding>                 
     <span class="mat-icon-button" disabled></span>
+    <mat-checkbox class="checklist-leaf-node"
+                  [checked]="checklistSelection.isSelected(node)"
+                  (change)="todoItemSelectionToggle(node)">
+                  </mat-checkbox>
     <span>{{node.item}}</span>
     <span class="mat-icon-button" (click)="addNewItem(node)"><mat-icon>add</mat-icon></span>
     <span class="mat-icon-button" (click)="RemoveItem(node)"><mat-icon>delete</mat-icon></span>
@@ -24,6 +28,12 @@
         {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
       </mat-icon>
     </span>
+    <mat-checkbox class="checklist-leaf-node"
+                  [checked]="checklistSelection.isSelected(node)"
+                  [indeterminate]="descendantsPartiallySelected(node)"
+                  (change)="todoItemSelectionToggle(node)"
+                  >
+                  </mat-checkbox>
     <span>{{node.item}}</span>
                  <span class="mat-icon-button" (click)="addNewItem(node)"><mat-icon>add</mat-icon></span>
                  <mat-tree-node *matTreeNodeDef="let node; when:hasChild"  matTreeNodePadding>  
