--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,15 +4,15 @@
 <h3 class="text-center">Kendo Chart Demo App</h3>
 
 <div class="row">
-    <div class="col">
+    <!-- <div class="col">
      <app-list></app-list>
-    </div>
+    </div> -->
     <div class="col">
 <app-directory></app-directory>
     </div>
 </div>
 
-<app-data></app-data>
+<!-- <app-data></app-data> -->
 <router-outlet></router-outlet>
 </div>
 
