--- a/src/app/components/directory/directory.component.html
+++ b/src/app/components/directory/directory.component.html
@@ -1,3 +1,6 @@
+<button mat-button (click)="openAddDialog('#')" >
+  Add New
+</button>
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
   <mat-tree-node *matTreeNodeDef="let node"
                  matTreeNodeToggle
@@ -9,24 +12,23 @@
                   (change)="todoItemSelectionToggle(node)">
                   </mat-checkbox> -->
     <span>{{node.item}}</span>
-    <span class="mat-icon-button" (click)="addNewItem(node)"><mat-icon>add</mat-icon></span>
+    <span class="mat-icon-button" (click)="openAddDialog(node)"><mat-icon>add</mat-icon></span>
     <span mat-raised-button class="mat-icon-button" (click)="openDialog(node)" ><mat-icon>edit</mat-icon></span>
     <span class="mat-icon-button" (click)="RemoveItem(node)"><mat-icon>delete</mat-icon></span>
   </mat-tree-node>
 
-  <mat-tree-node *matTreeNodeDef="let node; when: hasNoContent" matTreeNodePadding>
+  <!-- <mat-tree-node *matTreeNodeDef="let node; when: hasNoContent" matTreeNodePadding>
     <!-- <button  mat-button  >Cancel</button> -->
-    <mat-form-field>
+    <!-- <mat-form-field>
       <input matInput class="form-control" name="item" #itemValue placeholder="New item...">
     </mat-form-field>
-    <button mat-button (click)="saveNode(node, itemValue.value)">Save</button>
-   </mat-tree-node>
+    <button mat-button (click)="saveNode(node, itemValue.value)">Save</button> -->
+  <!-- </mat-tree-node> -->
 
   <mat-tree-node *matTreeNodeDef="let node; when: hasChild,toContentUpdate"  matTreeNodePadding>                   
         <span class="mat-icon-button" matTreeNodeToggle
                 [attr.aria-label]="'toggle ' + node.filename">
-          <mat-icon class="mat-icon-rtl-mirror">
-            
+          <mat-icon class="mat-icon-rtl-mirror">            
             {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
           </mat-icon>
         </span>
@@ -37,7 +39,7 @@
                       >
                       </mat-checkbox> -->
         <span>{{node.item!='children'?node.item:[]}}</span>
-                    <span class="mat-icon-button" (click)="addNewItem(node)"><mat-icon>add</mat-icon></span>
+                    <span class="mat-icon-button" (click)="openAddDialog(node)"><mat-icon>add</mat-icon></span>
                     <span mat-raised-button class="mat-icon-button" (click)="openDialog(node)"><mat-icon>edit</mat-icon></span>
                     <span class="mat-icon-button" (click)="RemoveItem(node)"><mat-icon>delete</mat-icon></span>
       
